# orchestrator-mcp

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  llm_delegator_mcp.py  mkdocs.yml  orchestrator-mcp.yaml.example  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  skill-request.md
.github/workflows/: ci.yml  deploy-pages.yml
benchmarks/: README.md
docs/: 404.md  about.md  benchmarks.md  cinematic-upgrade.md  cost-routing.md  dashboard.md  faq.md  index.md  marketplace.md  one-paste-installs.md  persona-architecture.md  providers.md  quickstart.md  roadmap.md  safety.md  skills.md
docs/.vitepress/: config.ts
docs/skills-categories/: advanced-packs.md  ai-ml.md  architecture.md  backend.md  business.md  content.md  data.md  devops.md  frontend.md  product.md  qa.md  security.md
examples/: claude-mcp.json  codex-config.toml  kimi-stdio.json
scripts/: check_public_repo.py
skills/: README.md  catalog.json
skills/accessibility-auditor-pro/: README.md  SKILL.md  marketplace.yaml  skill.yaml
skills/accessibility-first-navigator/: README.md  SKILL.md  marketplace.yaml  skill.yaml
skills/accessible-motion-designer/: README.md  SKILL.md  marketplace.yaml  skill.yaml
skills/agent-handoff-designer/: README.md  SKILL.md  marketplace.yaml  skill.yaml
skills/agent-memory-designer/: README.md  SKILL.md  marketplace.yaml  skill.yaml
skills/ai-evaluation-framework-builder/: README.md  SKILL.md  marketplace.yaml  skill.yaml
skills/ai-portfolio-router/: README.md  SKILL.md  marketplace.yaml  skill.yaml
skills/animation-budget-guardian/: README.md  SKILL.md  marketplace.yaml  skill.yaml
skills/api-contract-diff/: README.md  SKILL.md  marketplace.yaml  skill.yaml
skills/api-deprecation-strategist/: README.md  SKILL.md  marketplace.yaml  skill.yaml
skills/api-documentation-generator/: README.md  SKILL.md  marketplace.yaml  (+1 more)
tests/: test_analysis.py  test_marketplace.py  test_routing.py  test_safety.py  test_server_smoke.py  test_skills.py
(+505 files in other folders)
